# co2-oil-non-equilibrium-model

./: .gitattributes  .gitignore  CMakeLists.txt  FIGURES_README.md  README.md  TAUMS_ANALYSIS.md  calc_taums.cpp  calc_weq_lut.cpp  plot_taums.py  plot_weq.py  setup_ubuntu.sh  test.cpp
.claude-memory/: MEMORY.md  feedback.md  project.md  user.md
docs/: what_needed.md
scripts/: plot_taums.py  plot_weq.py
src/: saft_mie.cpp  saft_mie.h
